mlc: update swagger after jwt
